fix(agent): terminalize work after workflow failure